# wofi

./: .build.yml  .gitignore  .hgignore  .hgtags  CMakeLists.txt  README.md  clipboard-screenshot-preview.sh  meson.build  meson_options.txt
Debug/: makefile  objects.mk  sources.mk
Debug/modes/: subdir.mk
Debug/proto/: subdir.mk
Debug/src/: subdir.mk
Release/: makefile  objects.mk  sources.mk
Release/modes/: subdir.mk
Release/proto/: subdir.mk
Release/src/: subdir.mk
inc/: config.h  map.h  match.h  property_box.h  property_label.h  utils.h  utils_g.h  widget_builder.h  widget_builder_api.h  wofi.h  wofi_api.h
man/: wofi-api.3  wofi-config.3  wofi-keys.7  wofi-map.3  wofi-utils.3  wofi-widget-builder.3  wofi.1  wofi.3  wofi.5  wofi.7
modes/: dmenu.c  drun.c  run.c
src/: config.c  main.c  map.c  match.c  property_box.c  property_label.c  utils.c  utils_g.c  widget_builder.c  wofi.c
